tests/fixtures/invalid/pow_bytes_int_set.py
# Cannot call pow() with Bytes, Int, Set[int]
x = pow(b"hello", 1, {1, 2, 3})
